name:                hoom
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

executable holfenstein
  --hs-source-dirs:      src
  main-is:             Holfenstein.hs
  other-modules:       FPS, Grafix, Img, Line, Map, Math, Physics, Tex, Util, Window
  --extra-libraries:     gfx.o
  c-sources:           gfx.c
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array,
                       containers,
                       directory,
                       JuicyPixels,
                       linear,
                       pretty-simple,
                       sdl2,
                       text,
                       time,
                       unix,
                       vector

executable hoom
  --hs-source-dirs:      src
  main-is:             Hoom.hs
  other-modules:       Anim, Bsp, Diag, FPS, Grafix, Img, Line, Map, Math, Physics, Tex, Util, Window
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       JuicyPixels,
                       linear,
                       pretty-simple,
                       sdl2,
                       text,
                       time,
                       unix,
                       vector

executable larf
  --hs-source-dirs:      src
  main-is:             Larf.hs
  other-modules:       Anim, Bsp, Diag, FPS, Grafix, Img, Line, Map, Math, Physics, Shader, Tex, Util, Window
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       JuicyPixels,
                       linear,
                       pretty-simple,
                       sdl2,
                       text,
                       time,
                       unix,
                       vector
